--- a/package.json
+++ b/package.json
@@ -52,11 +52,11 @@
     "lodash": "4.15.0",
     "main-bower-files": "2.13.1",
     "map-stream": "0.0.6",
+    "ng-parallax": "^1.1.3",
     "phantomjs-prebuilt": "2.1.12",
     "proxy-middleware": "0.15.0",
     "run-sequence": "1.2.2",
     "xml2js": "0.4.17",
-
     "yargs": "5.0.0"
   },
   "engines": {
