--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -21,9 +21,10 @@ spring:
             enabled: false
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:mysql://localhost:3306/BakeryTPV?useUnicode=true&characterEncoding=utf8&useSSL=false
+        url: jdbc:mysql://aa4zqjpdgjyq0z.ceophkmnjbk7.us-east-2.rds.amazonaws.com:3306/BakeryTPV?useUnicode=true&characterEncoding=utf8&useSSL=false
+
         username: root
-        password:
+        password: bakerytpvstucom
         hikari:
             data-source-properties:
                 cachePrepStmts: true
